fix(coreui): ensure temp graph marks don't wrap

--- a/src/octoprint/static/less/octoprint.less
+++ b/src/octoprint/static/less/octoprint.less
@@ -591,6 +591,7 @@ table {
   font-size: 8px;
   transform-origin: 0 0;
   transform: rotate(-90deg);
+  white-space: nowrap;
 }
 
 .temperature-mark-type-print {
